src/test/fun-test/semantic/IncorrectReturnValue.java.err
Semantic error: incompatible types: INT required, got VOID, line 2, pos 17
