src/test/fun-test/semantic/IncorrectReturnValue.java
class Main {
    int foo() { return; }

    void main() {}
}